--- a/Floor1Schedule.xaml
+++ b/Floor1Schedule.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="STI_ONN.Floor2Schedules"
+﻿<Window x:Class="STI_ONN.Floor1Schedule"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -55,6 +55,7 @@
             </Button.Resources>
         </Button>
         <Label x:Name="roomLabel" Content="Room Schedules" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top" FontSize="20" FontWeight="Bold" FontFamily="Arial"/>
+        <Label x:Name="roomLabel2" Content="" HorizontalAlignment="Center" Margin="0,78,0,0" VerticalAlignment="Top" FontSize="20" FontWeight="Bold" FontFamily="Arial"/>
     </Grid>
 </Window>
 
