--- a/AnnouncementDetail.xaml
+++ b/AnnouncementDetail.xaml
@@ -1,7 +1,8 @@
 ﻿<Window x:Class="STI_ONN.AnnouncementDetail"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Announcement Details" Height="600" Width="800"
+        Title="Announcement Details" 
+        Height="600" Width="800"
         WindowStyle="None" ResizeMode="NoResize"
         WindowStartupLocation="CenterScreen"
         AllowsTransparency="True" 
