--- a/Floor2Schedules.xaml
+++ b/Floor2Schedules.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:STI_ONN"
         mc:Ignorable="d"
-        Title="room301" Height="750" Width="1350"
+        Title="2nd Floor Schedule" Height="750" Width="1350"
         WindowStyle="None"
         WindowState="Maximized"
         WindowStartupLocation="CenterScreen"
