--- a/ScheduleViewer.xaml
+++ b/ScheduleViewer.xaml
@@ -7,7 +7,8 @@
         mc:Ignorable="d"
         Title="ScheduleViewer" Height="800" Width="950"
         WindowStartupLocation="CenterScreen"
-        WindowStyle="None" ResizeMode="NoResize"
+        WindowStyle="SingleBorderWindow" ResizeMode="NoResize"
+        
         Background="#FFEAF2FF">
     <Grid>
         <Grid VerticalAlignment="Top" Height="60" Background="#FFD6E6F2" Panel.ZIndex="1" DockPanel.Dock="Top">
