--- a/Building.xaml
+++ b/Building.xaml
@@ -245,6 +245,17 @@
                                 </TransformGroup>
                             </Rectangle.RenderTransform>
                         </Rectangle>
+                        <Rectangle Name="cashier" Fill="transparent"
+                        MouseDown="ShowCashierSchedule" Canvas.Left="258" Canvas.Top="410" HorizontalAlignment="Center" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" Height="128" Width="191">
+                            <Rectangle.RenderTransform>
+                                <TransformGroup>
+                                    <ScaleTransform ScaleX="1.027"/>
+                                    <SkewTransform AngleX="-25" AngleY="11.724"/>
+                                    <RotateTransform Angle="-10.219"/>
+                                    <TranslateTransform X="3.729" Y="-8.235"/>
+                                </TransformGroup>
+                            </Rectangle.RenderTransform>
+                        </Rectangle>
 
                         <!-- Navigation Animation -->
                         <StackPanel Orientation="Vertical" HorizontalAlignment="Right" VerticalAlignment="Top" Height="63" Canvas.Left="750" Canvas.Top="362">
@@ -303,7 +314,7 @@
                 </StackPanel>
             </Grid>
             <!-- Dimming Overlay -->
-            <Rectangle Fill="#80000000" Visibility="Collapsed" Name="dimmingOverlay"/>
+            <Grid Name="dimmingOverlay" Background="#80000000" Visibility="Collapsed" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
         </Grid>
     </Viewbox>
 </Window>
